# sagemaker-ncf-mlflow

./: .gitignore  01_local_setup.ipynb  README.md  pyproject.toml
tutorial_notebook/: 01_local_setup.ipynb  02_preprocessing_pipeline.ipynb
tutorial_notebook/data/: backtest_results.csv  feature_importance.csv  googl_data_2020_2025.csv  market_condition_metrics.csv  monthly_performance.csv  processed_features.csv  trading_performance_summary.csv  trading_simulation_results.csv  window_metrics.csv  xgboost_model.joblib
tutorial_notebook/data/mlops_stages/: README.md  future_features.csv  historical_features.csv
tutorial_notebook/models/: scaler.joblib  xgboost_model.joblib  xgboost_model_init.joblib
tutorial_notebook/preprocessing/: Dockerfile  preprocess.py
tutorial_notebook/reports/: model_evaluation_summary.md  trading_strategy_report.md
tutorial_notebook/stage1/notebooks/: 01_environment_setup.ipynb  02_eda.ipynb  03_feature_engineering.ipynb  04_xgboost_implementation.ipynb  05_model_evaluation.ipynb  processed_features.pkl  requirements.txt
tutorial_notebook/stage2/notebooks/: 01_mlflow_setup.ipynb  02_mlflow_feature_engineering.ipynb  03_mlflow_registry.ipynb  04_mlflow_backtesting.ipynb  05_mlflow_retraining.ipynb  lag_feature_list.txt
