[project]
name = "sagemaker-ncf-mlflow"
version = "0.1.0"
description = "An end-to-end ML Engineering Project with NCF + Sagemaker + MLflow"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.29.5",
    "ipynb>=0.5.1",
    "pandas>=2.2.3",
    "ruff>=0.9.6",
    "sagemaker>=2.239.1",
]
